--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --config webpack.dev.config.js"
+    "start": "webpack serve --config ./config/webpack.config.js",
+    "build": "webpack --config ./config/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,19 @@
   },
   "homepage": "https://github.com/believeyourself/qianduan.shop#readme",
   "devDependencies": {
+    "@types/node": "^15.6.0",
+    "css-loader": "^5.2.5",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "less": "^4.1.1",
+    "less-loader": "^9.0.0",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^9.2.1",
+    "typescript": "^4.2.4",
     "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0"
+    "webpack-clean-plugin": "^0.2.3",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "dayjs": "^1.10.4",
