--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/believeyourself/qianduan.shop#readme",
   "devDependencies": {
     "@types/node": "^15.6.0",
+    "@types/react": "^17.0.8",
+    "@types/react-dom": "^17.0.5",
     "css-loader": "^5.2.5",
     "dotenv": "^10.0.0",
     "file-loader": "^6.2.0",
@@ -36,6 +38,7 @@
   "dependencies": {
     "dayjs": "^1.10.4",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
