--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,8 @@
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
+    "@types/react-router-dom": "^5.1.7",
+    "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.5",
     "dotenv": "^10.0.0",
     "file-loader": "^6.2.0",
