--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -8,8 +8,9 @@
     "allowJs": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
+      "@/*": ["./src/*"]
     }
   }
 }
