--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "cSpell.words": [
         "lizejun",
         "navs"
-    ]
+    ],
+    "compile-hero.disable-compile-files-on-did-save-code": true
 }
