--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/believeyourself/qianduan.shop#readme",
   "devDependencies": {
+    "@types/markdown-it": "^12.0.3",
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
@@ -47,6 +48,7 @@
   },
   "dependencies": {
     "dayjs": "^1.10.4",
+    "markdown-it": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
