--- a/front/package.json
+++ b/front/package.json
@@ -35,9 +35,14 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
     "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "less": "^4.1.1",
     "less-loader": "^9.0.0",
+    "remark": "^13.0.0",
+    "remark-frontmatter": "^3.0.0",
+    "remark-html": "^13.0.1",
+    "remark-loader": "^4.0.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.1",
     "typescript": "^4.2.4",
@@ -55,6 +60,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "uninstall": "0.0.0"
   }
 }
