--- a/front/package.json
+++ b/front/package.json
@@ -43,7 +43,8 @@
     "webpack": "^5.37.0",
     "webpack-clean-plugin": "^0.2.3",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "dayjs": "^1.10.4",
