--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,27 @@
 {
   "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "tsc app && node app",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "author": "lizejun",
-  "license": "MIT",
   "dependencies": {
-    "koa": "^2.13.1",
-    "koa-bodyparser": "^4.3.0",
-    "koa-router": "^10.0.0"
+    "next": "11.1.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "typescript": "^4.3.5",
-    "@types/koa": "^2.13.3"
+    "@types/react": "17.0.19",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
+    "less-vars-to-js": "^1.3.0",
+    "typescript": "4.4.2"
   }
 }
