--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
-    "cSpell.words": [
-        "lizejun",
-        "navs"
-    ],
-    "compile-hero.disable-compile-files-on-did-save-code": true,
-    "eslint.run": "onSave"
+  "cSpell.words": ["lizejun", "navs"],
+  "compile-hero.disable-compile-files-on-did-save-code": true,
+  "eslint.run": "onSave",
+  "git.ignoreLimitWarning": true
 }
