--- a/package.json
+++ b/package.json
@@ -22,18 +22,25 @@
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
     "express": "^4.17.1",
+    "marked": "^3.0.4",
     "react": "17.x",
     "react-dom": "17.x",
+    "remark": "^13.0.0",
     "umi": "^3.5.18"
   },
   "devDependencies": {
+    "@types/marked": "^3.0.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.18",
     "cross-env": "^7.0.3",
+    "html-loader": "^2.1.2",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
+    "remark-loader": "^4.0.0",
     "typescript": "^4.1.2",
     "yorkie": "^2.0.0"
   }
