--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "classnames": "^2.3.1",
     "express": "^4.17.1",
     "marked": "^3.0.4",
     "react": "17.x",
