--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "start": "cross-env UMI_UI=1 umi dev",
+    "start": "umi dev",
     "build": "cross-env UMI_ENV=prod umi build",
+    "block":"cross-env UMI_UI=1 UMI_ENT=block umi dev",
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
