--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "start": "umi dev",
-    "build": "cross-env UMI_ENV=prod umi build",
+    "build": "cross-env UMI_ENV=prod HTML=none umi build",
     "block":"cross-env UMI_UI=1 UMI_ENT=block umi dev",
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
