--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nzh": "^1.0.5",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-json-view": "^1.21.3",
     "remark": "^13.0.0",
     "umi": "^3.5.18"
   },
