--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "numeral": "^2.0.6",
     "nzh": "^1.0.5",
     "react": "17.x",
+    "react-adsense": "^0.1.0",
     "react-dom": "17.x",
     "react-json-view": "^1.21.3",
     "remark": "^13.0.0",
