--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "nzh": "^1.0.5",
+    "qnn-react-cron": "^0.1.3",
     "react": "17.x",
     "react-adsense": "^0.1.0",
     "react-dom": "17.x",
