--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-adsense": "^0.1.0",
     "react-dom": "17.x",
     "react-json-view": "^1.21.3",
+    "react-pdf": "^5.5.0",
     "remark": "^13.0.0",
     "umi": "^3.5.18"
   },
