--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "17.x",
     "react-json-view": "^1.21.3",
     "react-pdf": "^5.5.0",
+    "react-photo-view": "^0.5.7",
     "remark": "^13.0.0",
     "umi": "^3.5.18"
   },
