--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-pdf": "^5.5.0",
     "react-photo-view": "^0.5.7",
     "remark": "^13.0.0",
+    "social-share-react": "^1.1.2",
     "umi": "^3.5.18"
   },
   "devDependencies": {
