--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "react-json-view": "^1.21.3",
     "react-pdf": "^5.5.0",
     "react-photo-view": "^0.5.7",
+    "react-share-social": "^0.1.48",
     "remark": "^13.0.0",
-    "social-share-react": "^1.1.2",
     "umi": "^3.5.18"
   },
   "devDependencies": {
