--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "qianduan.shop server",
+  "name": "site-server",
   "version": "1.0.0",
-  "description": "qianduan.shop server",
+  "description": "qianduan.shop",
   "private": true,
   "egg": {
     "typescript": true,
     "declarations": true
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-qianduan.shop server",
-    "stop": "egg-scripts stop --title=egg-server-qianduan.shop server",
+    "start": "egg-scripts start --daemon --title=egg-server-qianduan.shop",
+    "stop": "egg-scripts stop --title=egg-server-qianduan.shop",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
     "test-local": "egg-bin test",
@@ -49,7 +49,9 @@
     "type": "git",
     "url": ""
   },
-  "eslintIgnore": ["coverage"],
+  "eslintIgnore": [
+    "coverage"
+  ],
   "author": "FarmerLZJ",
   "license": "MIT"
 }
