fix: 预渲染动态路由

--- a/front/package.json
+++ b/front/package.json
@@ -30,6 +30,7 @@
     "dayjs": "^1.10.7",
     "express": "^4.17.1",
     "js-md5": "^0.7.3",
+    "markdown": "^0.5.0",
     "marked": "^3.0.4",
     "numeral": "^2.0.6",
     "nzh": "^1.0.5",
